tests/expectations/compiler/core/cheatcodes/invalid_cheatcodes_fail.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:10:16
     |
  10 |         return finish(a);
     |                ^^^^^^^^^
Error [ETYC0372117]: Expected type `u32` but type `u64` was found.
    --> compiler-test:17:33
     |
  17 |     CheatCode::set_block_height(1u64);
     |                                 ^^^^
Error [ETYC0372117]: Expected type `u32` but type `u64` was found.
    --> compiler-test:18:33
     |
  18 |     CheatCode::set_block_height(a);
     |                                 ^
Error [ETYC0372117]: Expected type `i64` but type `u32` was found.
    --> compiler-test:19:36
     |
  19 |     CheatCode::set_block_timestamp(1u32);
     |                                    ^^^^
Error [ETYC0372117]: Expected type `i64` but type `address` was found.
    --> compiler-test:20:36
     |
  20 |     CheatCode::set_block_timestamp(b);
     |                                    ^
Error [ETYC0372117]: Expected type `string` but type `address` was found.
    --> compiler-test:21:27
     |
  21 |     CheatCode::set_signer(b);
     |                           ^
Error [ETYC0372156]: `CheatCode::set_signer` must be called with a valid private key
    --> compiler-test:23:27
     |
  23 |     CheatCode::set_signer("APrivateKey1zkp8CZNn3yeCseEtxuVPbDCwSyhGW6yZKUYKfgXmcpoGPW");
     |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
